--- a/config.json
+++ b/config.json
@@ -5,7 +5,12 @@
   "active": false,
   "test_pattern": "TODO",
   "exercises": [
-
+    {
+      "slug": "hello-world",
+      "difficulty": 1,
+      "topics": [
+      ]
+    }
   ],
   "deprecated": [
 
