--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,13 @@
-language: bash
+sudo: false
+
+addons:
+  apt:
+    sources:
+    - sourceline: 'ppa:jgross-h/many-coq-versions'
+    packages:
+    - coq-8.6
 
 before_install:
-- travis_retry sudo add-apt-repository -y ppa:jgross-h/many-coq-versions
-- travis_retry sudo apt-get update
-- travis_retry sudo apt-get install coq-8.6
 - coqc --version
 - export PATH="${TRAVIS_BUILD_DIR}/bin:$PATH" # For {,fetch-}configlet.
 
