--- a/config.json
+++ b/config.json
@@ -12,7 +12,7 @@
       ]
     },
     {
-      "slug": "rna-description",
+      "slug": "rna-transcription",
       "difficulty": 1,
       "topics": [
       ]
