--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
   "language": "Coq",
   "active": false,
-  "test_pattern": "TODO",
+  "test_pattern": ".*[.]v",
   "exercises": [
     {
       "uuid": "a001fd68-5913-4041-80ea-0558b269ba4f",
