disable unit test run

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,4 +19,5 @@ jobs:
       - name: Run exercism/coq ci (runs tests) for all exercises
         run: |
           export NJOBS=2
-          docker run --rm coqorg/coq:8.9 coq_makefile -f _CoqProject -o Makefile && make && make install
+          # Disable for now, as this step was already disabled in Travis config
+          # docker run --rm coqorg/coq:8.9 coq_makefile -f _CoqProject -o Makefile && make && make install
