--- a/config.json
+++ b/config.json
@@ -2,6 +2,7 @@
   "language": "Coq",
   "active": false,
   "blurb": "Coq is a proof assistant. Using Coq, you can write formal descriptions of mathematical definitions, algorithms and theorems. Coq also provides tactics to interactively develop machine-checked proofs.",
+  "version": 3,
   "test_pattern": ".*[.]v",
   "exercises": [
     {
