[v3] Add name property to practice exercises in config.json

--- a/config.json
+++ b/config.json
@@ -18,18 +18,21 @@
   "exercises": [
     {
       "slug": "hello-world",
+      "name": "Hello World",
       "uuid": "a001fd68-5913-4041-80ea-0558b269ba4f",
       "difficulty": 1,
       "topics": []
     },
     {
       "slug": "rna-transcription",
+      "name": "Rna Transcription",
       "uuid": "10a7ad13-8564-4713-853b-5b13a829ac50",
       "difficulty": 1,
       "topics": []
     },
     {
       "slug": "tautology",
+      "name": "Tautology",
       "uuid": "b647eb59-40ce-49c9-b0ce-775615ce0063",
       "difficulty": 1,
       "topics": []
