--- a/config.json
+++ b/config.json
@@ -15,30 +15,32 @@
     "indent_size": 4
   },
   "test_pattern": ".*[.]v",
-  "exercises": [
-    {
-      "slug": "hello-world",
-      "name": "Hello World",
-      "uuid": "a001fd68-5913-4041-80ea-0558b269ba4f",
-      "prerequisites": [],
-      "difficulty": 1,
-      "topics": []
-    },
-    {
-      "slug": "rna-transcription",
-      "name": "Rna Transcription",
-      "uuid": "10a7ad13-8564-4713-853b-5b13a829ac50",
-      "prerequisites": [],
-      "difficulty": 1,
-      "topics": []
-    },
-    {
-      "slug": "tautology",
-      "name": "Tautology",
-      "uuid": "b647eb59-40ce-49c9-b0ce-775615ce0063",
-      "prerequisites": [],
-      "difficulty": 1,
-      "topics": []
-    }
-  ]
+  "exercises": {
+    "practice": [
+      {
+        "slug": "hello-world",
+        "name": "Hello World",
+        "uuid": "a001fd68-5913-4041-80ea-0558b269ba4f",
+        "prerequisites": [],
+        "difficulty": 1,
+        "topics": []
+      },
+      {
+        "slug": "rna-transcription",
+        "name": "Rna Transcription",
+        "uuid": "10a7ad13-8564-4713-853b-5b13a829ac50",
+        "prerequisites": [],
+        "difficulty": 1,
+        "topics": []
+      },
+      {
+        "slug": "tautology",
+        "name": "Tautology",
+        "uuid": "b647eb59-40ce-49c9-b0ce-775615ce0063",
+        "prerequisites": [],
+        "difficulty": 1,
+        "topics": []
+      }
+    ]
+  }
 }
