[v3] Add concept exercises to config.json

--- a/config.json
+++ b/config.json
@@ -16,6 +16,7 @@
   },
   "test_pattern": ".*[.]v",
   "exercises": {
+    "concept": [],
     "practice": [
       {
         "slug": "hello-world",
