--- a/config.json
+++ b/config.json
@@ -15,6 +15,20 @@
     "indent_size": 4
   },
   "test_pattern": ".*[.]v",
+  "files": {
+    "solution": [
+      "%{kebab_slug}.v"
+    ],
+    "test": [
+      "test.v"
+    ],
+    "example": [
+      "example.v"
+    ],
+    "exemplar": [
+      ".meta/exemplar.v"
+    ]
+  },
   "exercises": {
     "concept": [],
     "practice": [
