Add blurb to Practice Exercise .meta/config.json files
Each Practice Exercise will have to define a blurb, which is a short description of the exercise.
The blurb will be displayed on a track's exercises page (e.g. https://exercism.lol/tracks/csharp/exercises).

For Practice Exercises that are based on an exercise defined in the problem-specification repo, the blurb must match the contents of the problem-specifications exercises, which is defined in its `metadata.yml` file. In this commit, we'll do an initial syncing of the blurb. The new [configlet](https://github.com/exercism/configlet) version will add support for doing this syncing automatically.

If the Practice Exercise was _not_ based on a problems-specifications exercise, we've used the blurb from its `.meta/metadata.yml` file as the blurb in the .meta/config.json file.

See [the spec](https://github.com/exercism/docs/blob/main/anatomy/tracks/practice-exercises.md#file-metaconfigjson) for more information.

--- a/exercises/practice/tautology/.meta/config.json
+++ b/exercises/practice/tautology/.meta/config.json
@@ -1,4 +1,5 @@
 {
+  "blurb": "The first rule of the Tautology Club is the first rule of the Tautology Club ",
   "authors": [],
   "files": {
     "solution": [],
