Add Practice Exercise example files to .meta directory
The example implementation files for Practice Exercises should be located in the `.meta` directory. Besides being consistent with Concept Exercises, it also has the added benefit that no extra configuration is needed to prevent the example file from being downloaded to the student (as files in the `.meta` directory are never downloaded).

See [the spec](https://github.com/exercism/docs/blob/main/anatomy/tracks/practice-exercises.md#file-example-implementation).

--- a/exercises/practice/hello-world/.meta/config.json
+++ b/exercises/practice/hello-world/.meta/config.json
@@ -15,7 +15,7 @@
       "test.v"
     ],
     "example": [
-      "example.v"
+      ".meta/example.v"
     ]
   },
   "source": "This is an exercise to introduce users to using Exercism",
