Reformat exercise config files
This runs the `bin/configlet fmt --update` command to
reformat the exercise configs.

--- a/exercises/practice/tautology/.meta/config.json
+++ b/exercises/practice/tautology/.meta/config.json
@@ -1,5 +1,4 @@
 {
-  "blurb": "The first rule of the Tautology Club is the first rule of the Tautology Club ",
   "authors": [
     "vzaliva"
   ],
@@ -17,5 +16,6 @@
     "example": [
       ".meta/example.v"
     ]
-  }
+  },
+  "blurb": "The first rule of the Tautology Club is the first rule of the Tautology Club "
 }
